Sat Feb 1 13:57:17 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtCookie.[h,cc]: allowed printDebug to be passed an ostream object
	* htnet/HtCookieMemJar.cc: removed a debug call

Thu Jan 30 19:28:32 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* configure.in: used AC_LIBOBJ instead of deprecated LTLIBOBJS's workaround
	* ltconfig: removed as not needed anymore since libtool 1.4
	* db/configure.in: added AC_CONFIG_AUX_DIR(../) for letting automake know to use
	the main ltmain.sh file
	* configure, aclocal.m4, Makefile.in, */Makefile.in, config.guess, config.sub,
	install-sh, ltmain.sh, missing, mkinstalldirs: re-generated by autotools:
	aclocal, autoconf 2.57, automake 1.6.3 and libtool 1.4.3
	* db/aclocal.m4, db/configure, db/mkinstalldirs: ditto

Thu Jan 30 00:16:51 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htsearch/htsearch.cc: removed a warning due to a not-initialized pointer

Wed Jan 29 22:53:25 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* acinclude.m4: included the function for checking against SSL, as
	found in the ac-archive.

Tue Jan 28 12:23:16 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/Makefile.am: added HtCookieInFileJar.[h,cc] files
	* installdir/cookies.txt: example file for pre-loading HTTP cookies
	* installdir/Makefile.am: added cookies.txt

Tue Jan 28 12:16:28 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtCookieMemJar.[h,cc]: performed deep copy of the jar in the copy constructor

Tue Jan 28 12:13:44 CET 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* htnet/HtCookie.[h,cc]: added the constructor of a cookie object from a line
	of a cookie input file (Netscape's way): if an expiration value of '0' is set
	through the cookies input file, the cookie is managed as a session cookie.
	Improved copy constructor, solving a bug related to the expires field. 
